package br.unitins.topicos2.ano2024.dto;

public record AmenidadeDTO(
    String nome
) {
    
}
