package br.unitins.topicos2.ano2024.dto;

public record ServicoDTO(
        String nome,
        String descricao,
        double valor,
        boolean isAtivo
) {

}
