@startuml OasisHotel

class Usuario {
    - id: Long
    - nome: String
    - sobrenome: String
    - email: String
    - senha: String
    - dataNascimento: Date
    - endereco: String
    - cpf: String
}

enum Perfil {
    - FUNCIONARIO: int
    - CLIENTE: int
}

class Telefone {
    - id: Long
    - numero: String
}

class Quarto {
    - id: Long
    - nome: String
    - valor: double
    - descricao: String
    - isReservado: boolean
    - isAtivo: boolean
}

class TipoQuarto {
    - id: Long
    - nome: String
}

class Amenidade {
    - id: Long
    - nome: String
}

class Promocao {
    - id: Long
    - nome: String
    - descricao: String
    - dataInicio: Date
    - dataFim: Date
    - valor: double
}

class ReservaQuarto {
    - id: Long
    - checkInDate: Date
    - checkOutDate: Date
    - qtdAdultos: int
    - qtdCrianca: int
    - valor: double
}

class Servico {
    - id: Long
    - nome: String
    - descricao: String
    - valor: double
    - isAtivo: boolean
}

class Reserva {
    - id: Long
    - valor: double
}

class CartaoCredito {
    - id: Long
    - titular: String
    - validade: Date
    - numero: int 
    - codigoVerificacao: String
}

class CupomDesconto {
    - id: Long
    - codigo: String
    - descricao: String
    - valor: double
    - dataValidade: LocalDate
}

class Avaliacao {
    - id: Long
    - titulo: String
    - descricao: String
    - rate: String
    - divulgacao: bool
}

class Mensagem {
    - id: Long
    - email: String
    - nome: String
    - telefone: String
    - descricao: String
    - assunto: String
}

class TipoMensagem {
    - id: Long
    - nome: String
}

Usuario "1" o--> "*" Telefone
Usuario "*" -up-> "*" Perfil
Usuario "1" *--> "*" CartaoCredito

Mensagem "*" -right-> "1..0" Usuario
Mensagem "1" --> "1" TipoMensagem

Avaliacao "*" *-left-> "1" Usuario
Avaliacao "1" *--> "1" Reserva

Usuario "1" *--> "*" Reserva

Reserva "1" --> "*" ReservaQuarto

ReservaQuarto "1" o--> "*" Servico
ReservaQuarto "1" o--> "1" Quarto

Quarto "*" o--> "*" Amenidade
Quarto "*" --> "1" TipoQuarto

Promocao "*" *--> "1" TipoQuarto

CupomDesconto "*" *--> "1" TipoQuarto


@enduml

